--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background-color:#222">
   <head>
     <script src="./p5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
